--- a/configs/General.config
+++ b/configs/General.config
@@ -1,5 +1,6 @@
 ## 通用配置文件
 
+CONFIG_USE_APK=n
 CONFIG_CCACHE=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
@@ -39,31 +40,67 @@ CONFIG_PACKAGE_acme-acmesh-dnsapi=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 
+
+# ====== laipeng668定制包 ======
+#CONFIG_PACKAGE_luci-app-argon-config=y
+#CONFIG_PACKAGE_luci-app-cpufreq=y
+#CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_luci-app-ttyd=y
+#CONFIG_PACKAGE_luci-app-upnp=y
+#CONFIG_PACKAGE_luci-app-wolplus=y
+#CONFIG_PACKAGE_luci-app-samba4=y
+#CONFIG_PACKAGE_luci-app-vlmcsd=y
+#CONFIG_PACKAGE_luci-app-aria2=y
+#CONFIG_PACKAGE_luci-app-autoreboot=y
+#CONFIG_PACKAGE_luci-app-uhttpd=y
+#CONFIG_PACKAGE_luci-app-frps=y
+#CONFIG_PACKAGE_luci-app-frpc=y
+#CONFIG_PACKAGE_luci-app-diskman=y
+#CONFIG_PACKAGE_luci-app-hd-idle=y
+#CONFIG_PACKAGE_luci-app-banip=y
+#CONFIG_PACKAGE_luci-app-acme=y
+#CONFIG_PACKAGE_luci-app-arpbind=y
+#CONFIG_PACKAGE_luci-app-usb-printer=y
+#CONFIG_PACKAGE_luci-app-homeproxy=y
+#CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-sqm=y
+#CONFIG_PACKAGE_ariang=y
+#CONFIG_PACKAGE_adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-proto-wireguard=y
+#CONFIG_PACKAGE_luci-app-watchcat=y
+#CONFIG_PACKAGE_luci-app-3cat=y
+
+
+# === 包组定义，仅展示分组逻辑，无实际影响 ===
+CONFIG_PACKAGE_GROUP_BASE="netspeedtest openclash samba4 smbuser tailscale taskplan ttyd upnp zram-swap"
+CONFIG_PACKAGE_GROUP_ATHENA_LITE="easytier lucky partexp"
+CONFIG_PACKAGE_GROUP_ATHENA_FULL="ddns-go homeproxy istorex"
+
+
+# ====== Mary定制包_GROUP_BASE ======
+# ====== 以下的包会默认安装到所有设备！ ======
+# ====== 不希望安装的建议添加到单独配置文件！ ======
+
 CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-app-cpufreq=y
-CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
+#CONFIG_PACKAGE_nikki=y
+#CONFIG_PACKAGE_luci-app-nikki=y
+#CONFIG_PACKAGE_luci-i18n-nikki-zh-cn=y
+#CONFIG_PACKAGE_openclash=y
+#CONFIG_PACKAGE_luci-app-openclash=y
+#CONFIG_PACKAGE_luci-app-openlist2=y
+#CONFIG_PACKAGE_luci-app-partexp=y
+#CONFIG_PACKAGE_quickfile=y
+#CONFIG_PACKAGE_luci-app-quickfile=y
+CONFIG_PACKAGE_samba4=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-smbuser=y
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_taskplan=y
+CONFIG_PACKAGE_luci-app-taskplan=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-wolplus=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_luci-app-frps=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-banip=y
-CONFIG_PACKAGE_luci-app-acme=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-homeproxy=y
-CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_ariang=y
-CONFIG_PACKAGE_adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
-CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-3cat=y
+CONFIG_PACKAGE_zram-swap=y
