--- a/.github/workflows/Arthur_Athena-ImmWrt.yml
+++ b/.github/workflows/Arthur_Athena-ImmWrt.yml
@@ -1,4 +1,4 @@
-name: Arthur&Athena-ImmortalWrt
+name: Arthur_Athena-ImmortalWrt
 
 on:
   workflow_dispatch:
@@ -9,14 +9,14 @@ on:
 env:
   REPO_URL: https://github.com/laipeng668/immortalwrt.git
   REPO_BRANCH: master
-  CONFIG_FILE: configs/Arthur&Athena.config
+  CONFIG_FILE: configs/Arthur_Athena.config
   GENERAL_CONFIG_FILE: configs/General.config
-  DIY_SCRIPT: scripts/Roc-script.sh
+  DIY_SCRIPT: scripts/script.sh
   CLASH_KERNEL: amd64
-  MADS: false
+  MADS: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: Arthur&Athena&Taiyi
+  FIRMWARE_TAG: Arthur&Athena
   TZ: Asia/Shanghai
 
 jobs:
@@ -182,11 +182,12 @@ jobs:
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
           ### 📒 固件信息
-          - 这是开启全功能NSS的6.12内核固件，默认主题为Argon；该固件在ImmortalWrt的基础上，添加了额外的软件包cpufreq、ddns、ttyd、upnp、wolplus、samba4、vlmcsd、aria2、autoreboot、uhttpd、wifischedule、frps、frpc、diskman、hd-idle、banip、acme、arpbind、usb-printer、homeproxy、openlist、adguardhome、oaf、sqm、wireguard、watchcat、3cat（**Taiyi**额外增加了filebrowser、dockerman、gecoosac、lucky），并添加了若干工具，具体详见对应机型的config。
+          - 这是开启全功能NSS的6.12内核固件，默认主题为Argon
+          - 该固件在ImmortalWrt的基础上，添加了额外的软件包，并添加了若干工具，具体详见对应机型的config
           - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 OpenWrt 固件
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🌐 默认地址: **192.168.2.1**
+          - 🌐 默认地址: **192.168.111.1**
           - 🔑 默认密码: none
           - 🚀 WiFi名称: **Star**
           - 🔑 WiFi密码: 12345678
