添加资源监控状态

--- a/.github/workflows/AA-Imm-test2.yml
+++ b/.github/workflows/AA-Imm-test2.yml
@@ -149,7 +149,19 @@ jobs:
         echo "💾 内存使用率: ${MEM_USED}%"
         echo "💽 硬盘使用(根分区): ${DISK_USED}"
         echo "===================================================================="
-          done
+        echo "====================== 编译期间系统占用监控 ======================"
+        echo "🕒 监控时间: $(date)"
+        echo "💾 磁盘使用情况:"
+        df -hT | grep -E '^(Filesystem|/dev/)'
+        echo "📦 内存使用情况:"
+        free -h
+        echo "⚡ CPU 负载:"
+        uptime
+        echo "=========================================================="        echo "## 🔄 编译期间系统占用监控 （频率 15分钟）"
+        echo "- 🕐 当前时间: $(date)"
+        echo "- 💾 磁盘使用率: $(df -h / | tail -1 | awk '{print $5}')"
+        echo "- 📦 内存使用率: $(free | grep Mem | awk '{printf("%.1f%%", $3/$2 * 100.0)}')"
+        echo ""  done
         } &  # 后台运行
         MONITOR_PID=$!
 
