--- a/configs/General.config
+++ b/configs/General.config
@@ -81,6 +81,8 @@ CONFIG_PACKAGE_GROUP_ATHENA_FULL="ddns-go homeproxy istorex"
 # ====== Mary定制包_GROUP_BASE ======
 # ====== 以下的包会默认安装到所有设备！ ======
 # ====== 不希望安装的建议添加到单独配置文件！ ======
+# 已调整工作流合并顺序，设备Config文件放后面，如果有相同配置不同参数以设备Config的为准。
+
 
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
