--- a/configs/Arthur_Athena.config
+++ b/configs/Arthur_Athena.config
@@ -51,6 +51,7 @@ CONFIG_NSS_FIRMWARE_VERSION_12_5=y
 # ====== Mary定制包（下面的包如果=y会给本配置文件所有设备默认安装） ======
 # ====== 模块化设计（=m）的优势是​​可后期安装/卸载 ======
 # ====== 模块化设计（=m）与上方设备特定包重复会造成冲突，尽量使用特定包 ======
+# 已调整工作流合并顺序，General.Config文件在前面，如果有相同配置不同参数以本设备Config的为准。
 #CONFIG_PACKAGE_nikki=m
 #CONFIG_PACKAGE_luci-app-nikki=m
 #CONFIG_PACKAGE_luci-i18n-nikki-zh-cn=m
