--- a/.github/workflows/AA-Imm-test3-Full.yml
+++ b/.github/workflows/AA-Imm-test3-Full.yml
@@ -20,9 +20,8 @@ env:
   MADS: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: Arthur-Athena
+  FIRMWARE_TAG: Arthur_Athena
   TZ: Asia/Shanghai
-  DATE: ${{ date('YYYY.MM.DD') }} 
 
 jobs:
   Build:
@@ -96,8 +95,9 @@ jobs:
         echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
         echo "HASH=$(git log -1 --pretty=format:'%h')" >> $GITHUB_ENV
         echo "CACHE_DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        # 使用 shell 命令生成日期变量
         echo "DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
-        
+                
     - name: Cache Toolchain(缓存工具链)
       uses: actions/cache@main
       with:
