--- a/.github/workflows/AA-Imm-T4.yml
+++ b/.github/workflows/AA-Imm-T4.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         config_file: 
-          - configs/Arthur_Athena_Lite.config,
+          - configs/Arthur_Athena_Lite.config
           - configs/Arthur_Athena_Full.config       
         
     steps:
