--- a/.github/workflows/0T0.yml
+++ b/.github/workflows/0T0.yml
@@ -45,7 +45,7 @@ jobs:
       - name: 克隆OpenWrt源码
         run: |
           # 克隆指定的OpenWrt仓库，分支为6.12-nss
-          git clone --branch 6.12-nss https://github.com/laipeng668/openwrt-6.x.git openwrt-source
+          git clone --branch k6.12-nss https://github.com/laipeng668/openwrt-6.x.git openwrt-source
           # 进入源码目录
           cd openwrt-source
           # 确保所有子模块都已初始化
